[gd_scene load_steps=7 format=2]

[ext_resource path="res://Textures/HealthBar.png" type="Texture" id=1]
[ext_resource path="res://Textures/FIeldView.PNG" type="Texture" id=2]
[ext_resource path="res://Scripts/SecurityCamera.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Switch.gd" type="Script" id=4]
[ext_resource path="res://Textures/IMG_0966.PNG" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.3827, 32.9251 )

[node name="Switch" type="Area2D"]
position = Vector2( 1079.14, 178.61 )
z_index = -1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.156863, 1 )
scale = Vector2( 22.5331, 8.22723 )
texture = ExtResource( 1 )

[node name="Outline" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 29.2531, 9.34723 )
z_index = -1
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="SecurityCamera" type="Area2D" parent="."]
position = Vector2( -553.466, -893.564 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="SecurityCamera"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )

[node name="FieldOfView" type="Sprite" parent="SecurityCamera"]
modulate = Color( 0, 0, 0, 0.439216 )
position = Vector2( -6.30933, 521.452 )
rotation = -1.5708
scale = Vector2( 1, 0.319999 )
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SecurityCamera"]
position = Vector2( -6.30933, 521.452 )
rotation = -1.5708
scale = Vector2( 1, 0.319999 )
polygon = PoolVector2Array( -456, -494, -438, -494, -438, -491.4, -436.4, -484, -418, -484, -418, -481.4, -416.4, -474, -409.2, -474, -406, -470.8, -406, -464, -388.4, -464, -386.3, -454, -368.4, -454, -366.3, -444, -348.4, -444, -346.3, -434, -328.4, -434, -326.3, -424, -308.4, -424, -306.3, -414, -288.4, -414, -286.3, -404, -268.4, -404, -266.3, -394, -248, -394, -248, -391.4, -246.4, -384, -228, -384, -228, -381.4, -226.4, -374, -208, -374, -208, -371.4, -206.4, -364, -188, -364, -188, -361.4, -186.4, -354, -179.2, -354, -176, -350.8, -176, -344, -158.4, -344, -156.3, -334, -138, -334, -138, -331.4, -136.4, -324, -129.2, -324, -126, -320.8, -126, -314, -108.4, -314, -106.3, -304, -88, -304, -88, -301.4, -86.4, -294, -79.2, -294, -76, -290.8, -76, -284, -58.4, -284, -56.3, -274, -28.4, -274, -26.3, -264, -8, -264, -8, -261.4, -6.39999, -254, 12, -254, 12, -251.4, 13.6, -244, 41.6, -244, 43.7, -234, 71.6, -234, 73.7, -224, 102, -224, 102, -221.4, 103.6, -214, 132, -214, 132, -211.4, 133.6, -204, 152, -204, 152, -201.4, 153.6, -194, 181.6, -194, 183.7, -184, 212, -184, 212, -181.4, 213.6, -174, 232, -174, 232, -171.4, 233.6, -164, 261.6, -164, 263.7, -154, 292, -154, 292, -151.4, 293.6, -144, 322, -144, 322, -141.4, 323.6, -134, 342, -134, 342, -131.4, 343.6, -124, 381.6, -124, 383.7, -114, 411.6, -114, 413.7, -104, 432, -104, 432, -101.4, 433.6, -94, 461.6, -94, 463.7, -84, 482, -84, 482, -81.4, 483.6, -74, 500, -74, 500, 94, 484, 94, 484, 102, 481.4, 102, 474, 103.6, 474, 110.8, 470.8, 114, 453.7, 114, 451.6, 124, 423.7, 124, 421.6, 134, 394, 134, 394, 140.8, 390.8, 144, 364, 144, 364, 151.8, 344, 153.8, 344, 160.8, 340.8, 164, 314, 164, 314, 171.8, 294, 173.8, 294, 180.8, 290.8, 184, 274, 184, 274, 190.8, 270.8, 194, 243.7, 194, 241.6, 204, 214, 204, 214, 210.8, 210.8, 214, 184, 214, 184, 221.8, 164, 223.8, 164, 230.8, 160.8, 234, 144, 234, 144, 240.8, 140.8, 244, 113.7, 244, 111.6, 254, 83.7, 254, 81.6, 264, 54, 264, 54, 270.8, 50.8, 274, 24, 274, 24, 280.8, 20.8, 284, -16.3, 284, -18.4, 294, -46, 294, -46, 300.8, -49.2, 304, -76, 304, -76, 311.8, -96, 313.8, -96, 320.8, -99.2, 324, -126, 324, -126, 331.8, -146, 333.8, -146, 340.8, -149.2, 344, -166, 344, -166, 350.8, -169.2, 354, -196, 354, -196, 361.8, -216, 363.8, -216, 370.8, -219.2, 374, -236, 374, -236, 381.6, -246, 383.7, -246, 390.8, -249.2, 394, -276.3, 394, -278.4, 404, -296.3, 404, -298.4, 414, -316.3, 414, -318.4, 424, -336, 424, -336, 430.8, -339.2, 434, -356, 434, -356, 440.8, -359.2, 444, -376, 444, -376, 450.8, -379.2, 454, -396, 454, -396, 461.6, -406, 463.7, -406, 470.8, -409.2, 474, -426, 474, -426, 480.8, -429.2, 484, -446, 484, -446, 491.6, -456, 493.7, -456, 500, -500, 500, -500, -500, -456, -500 )
[connection signal="body_entered" from="." to="." method="_on_Switch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Switch_body_exited"]
[connection signal="body_entered" from="SecurityCamera" to="SecurityCamera" method="_on_SecurityCamera_body_entered"]
[connection signal="body_exited" from="SecurityCamera" to="SecurityCamera" method="_on_SecurityCamera_body_exited"]
